Add Waydinean Socialist Party's logo

--- a/src/pt/waydines.mdx
+++ b/src/pt/waydines.mdx
@@ -208,6 +208,8 @@ a guerra, no [Delta SMP 5.1](Delta%20SMP%5.1), Cupertino nomeou Portugueskiy com
 formando uma aliança que persiste até hoje entre Waydines e o [Xogunato Ryūsei](Xogunato%20Ryūsei), 
 sucessor de Norden.
 
+<Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741877950/Communist_Waydines_yzdfnk.svg" maxWidth="12rem" description="Logotipo do Partido Socialista de Waydines" />
+
 Nesse período, o Partido Aceleracionista foi renomeado para [Partido Socialista de 
 Waydines](Partido%20Socialista%20de%20Waydines) e começou uma disputa mais acirrada com o Partido 
 Nacionalista. A crescente instabilidade política foi explorada por [Emmeria](Emmeria), um país com o 
