Many new staging articles and changes to CONTRIBUTING.md

--- a/src/pt/waydines.mdx
+++ b/src/pt/waydines.mdx
@@ -282,7 +282,7 @@ e aconselhar ações parlamentares direcionadas ao seu respectivo distrito. Segu
 eles ainda que relativamente autônomos, devem seguir qualquer ordem ou imposição dos ministros e Parlamento.
 
 ## Democracia
-<Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741874088/socdemgu_gsphaz.svg" height="8rem" description="Logotipo do Partido Social Democratas"/>
+<Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741874088/socdemgu_gsphaz.svg" height="8rem" description="Logotipo do partido Social Democratas"/>
 
 Atualmente o país conta com somente um partido, os Social Democratas, mas, com o recente crescimento
 populacional de Waydines, provavelmente terá em breve um segundo partido, que, quando formado, iniciará
@@ -309,6 +309,8 @@ do país, e os dias de eleição, momentos em que o povo reafirma seu compromiss
 Na arquitetura, Waydines apresenta uma fusão única entre o barroco neerlandês e o modernismo, criando 
 um ambiente urbano que mescla a grandiosidade ornamental com a funcionalidade contemporânea. Essa 
 combinação reflete o espírito do país: um equilíbrio entre tradição e inovação.
+
+<Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741987884/ererer_ismxcw.png" description="Roupa de frio waydineense" />
 
 Os waydineenses são conhecidos por sua cordialidade e timidez, características que influenciam sua 
 forma de socialização e participação política. Embora reservados, valorizam o diálogo e a diplomacia,
