Translated Waydines' Article to English

--- a/src/en/waydines.mdx
+++ b/src/en/waydines.mdx
@@ -6,7 +6,7 @@ short_description: "Country in Elysium"
 ---
 
 **Waydines** (/we&#618;da&#618;nɛs/), officially the **Parliamentary Republic of Waydines**, is an 
-[elysian](Elysium) and a [brazilbourgish](Brazilburg) country (which makes it a cousin-nation of 
+[Elysian](Elysium) and a [Brazilbourgish](Brazilburg) country (which makes it a cousin-nation of 
 [Frigustell](Frigustell)). Composed of two districts, being these its planned capital [Mitterfurt](Mitterfurt) 
 and the city of [Gremont](Gremont), it has a total of 13 officially registered citizens (2024). 
 Adittionally, Waydines is a member and founder state of the [Elysian Union](Elysian%20Union).
@@ -71,8 +71,8 @@ Adittionally, Waydines is a member and founder state of the [Elysian Union](Elys
         <td>Religion (2023)</td>
         <td>
             <ul>
-                <li>94% <a href="Madeism">Madeism</a></li>
-                <li>6% no religion</li>
+                <li>83% <a href="Madeism">Madeism</a></li>
+                <li>17% no religion</li>
             </ul>
         </td>
     </tr>
@@ -81,7 +81,236 @@ Adittionally, Waydines is a member and founder state of the [Elysian Union](Elys
         <td><a href="Elisio">Elisio</a> (<code>ELS</code>)</td>
     </tr>
     <tr>
-        <td>Governmental <i>Website</i></td>
+        <td>Government's <i>Website</i></td>
         <td><a href="https://waydines.vercel.app/">waydines.vercel.app</a></td>
     </tr>
 </QuickFacts>
+
+# Etymology
+The name “Waydines” has uncertain origins. It was chosen shortly after the war of independence, having
+been proposed by [Wolfi Hraje](Wolfi%20Hraje), who is no longer part of the community. The original
+meaning has been lost over time; however, the most probable hypothesis is that it derives from Anglo-Saxon
+and that it means something like “People of Great Love.” In runes, it would be represented as ::ᚹᛁᛖᛞᛖᚾᚪᛋ::.
+
+# History
+## Empire of Waydines
+On January 2, 2021, the Kingdom of Brazilburg was created, with [Don Ravi](Don%20Ravi) as king and 
+[Cupertino](Cupertino%20Kurt) as prince. Within a few days, Brazilburg was subdivided into two regions: 
+Southern Brazilburg, a colony under the prince's control, and Northern Brazilburg, the metropolis.
+
+However, on January 4, 2021, when the colony's camps in the south began to consolidate into a city, 
+its inhabitants started to feel that Brazilburg was not keeping pace with the development of the other 
+countries. The lack of resources in the national treasury and the absence of progress in the Nether 
+reinforced this perception.
+
+In this scenario, two generals, Wolfi Hraje and Jobje, were appointed to lead a revolt movement, 
+spearheaded by Prince Cupertino. With international support, the conflict culminated in a war on 
+January 6, 2021. To avoid the destruction of structures, the battle was fought in a coliseum with 
+international spectators. The conflict ended when King Don Ravi signed the recognition of the colony's 
+independence.
+
+Shortly after independence, Brazilburg integrated into Waydines as a city under the name “Fucking,” 
+which was later renamed to Kamchatskiy at Cupertino's request.
+
+Initially, Waydines adopted a [diarchic](https://en.wikipedia.org/wiki/Diarchy) system, governed by 
+Wolfi and Cupertino. However, the structure quickly evolved into a semi-constitutional monarchy, with 
+Cupertino as king and Wolfi assuming the position of prime minister without elections. This system 
+created tensions between the two leaders, as Wolfi felt his power was being reduced.
+
+The conflict between them reached its peak during a [plebiscite](https://www.wikiwand.com/en/articles/Plebiscite) 
+to rename the capital, then called [Grantsldenhill](Grantsldenhill). Two proposals were presented: 
+Mitterfürt, suggested by the king, and Fürstenbach, proposed by the prime minister. The victory of 
+Mitterfürt in the plebiscite, combined with growing internal pressure, resulted in the **War of the 
+Two Names**. The conflict pitted Brazilians, who favored Mitterfürt, against foreigners, personal 
+friends of Wolfi, who supported Fürstenbach. The war ended with Mitterfürt's victory.
+
+The Empire of Waydines came to an end with the dissolution of [Fly SMP](Fly%20SMP) on February 24, 
+2021, of which the country was a part. The server was shut down due to complaints of unjust bans by 
+moderators. Curiously, by the end of the imperial period, Kamchatskiy was more developed than 
+Mitterfürt, contrasting with the original reason for independence.
+
+## First Republic
+The First Republic was a period of relative stability, with few significant political events. The 
+provisional post-proclamation government adopted a [presidential system](https://en.wikipedia.org/wiki/Presidential_system), 
+with Cupertino as president and Don Ravi as vice president. A first election was planned but never 
+took place. Additionally, during this period, Jobje and Wolfi left Waydines and did not participate 
+in any other server.
+
+The most relevant event of this phase was the war between the Confederation of Crusoe — the name of 
+the country created by Don Ravi that served as a “mask” for Waydines, in an environment where no more 
+than two official countries could exist — and the [Faccists](Faccists) (not to be confused with fascists). 
+During the conflict, Cupertino exploited a security breach in the server to obtain operator access, 
+ensuring Waydines' victory. This period extended from the end of Fly SMP until [Delta SMP 3](Delta%20SMP%203).
+
+This period extended from the end of Fly SMP until [Delta SMP 3](Delta%20SMP%203).
+
+## Second Republic
+The Second Republic, also called [New Waydines](Second%20Republic%20of%20Waydines), began with several 
+political reforms implemented by Cupertino and Don Ravi. Waydines adopted a [semi-presidential](https://en.wikipedia.org/wiki/Semi-presidential_system) 
+regime (although officially it considered itself [parliamentary](https://en.wikipedia.org/wiki/Parliamentary_system)) and 
+promulgated its first constitution, called the _Constssung_. Additionally, Mitterfürt was renamed to 
+Mitterfurt. This period was marked by intense political agitation, but also by a cultural and identity 
+flourishing within Waydinean society.
+
+For the first time, the country had a truly organized political system. The [Nationalist Party of Waydines](Nationalist%20Party%20of%20Waydines), 
+led by Cupertino with 5 members, and the [Accelerationist Party of Waydines](Accelerationist%20Party%20of%20Waydines), 
+led by Don Ravi with 4 members, emerged. The first elections were held, electing Cupertino as prime 
+minister and Ravi as president. The electoral system of the Second Republic was unusual: the prime 
+minister was directly elected by the people, and Parliament seats were filled through a [majority election](https://en.wikipedia.org/wiki/First-past-the-post_voting)
+for each seat.
+
+Later, the parliamentary elections gave all seats to the Nationalist Party.
+
+It was also during this time that the primitive [Madeist church](Madeism) was born, due to parallel 
+events among people who played on EDG SMP. Due to Waydines' strong relationship with EDG, the religion 
+grew rapidly and, at its peak, represented 100% of the population.
+
+### The 40hzRay Crisis
+
+At the beginning of the New Republic, there was chaos. A citizen, [40hzRay](40hzRay), began repeatedly 
+causing damage to the nation and its inhabitants. In response, the constituent assembly rushed to 
+promulgate the constitution, and a Supreme Court was formed, with [Shazy](Shazy) as minister.
+
+An extraordinary trial was initiated, considering actions that predated the constitution. 
+He was accused of various crimes, including:
+
+- Sabotage of the server's enderman farm;
+- Theft and destruction in the Sanctuary subdistrict;
+- Thefts in Hillpath;
+- Murder of players and pets;
+- Invasion of private and state properties;
+- Theft of the dragon egg.
+
+The events occurred during [Delta SMP 4](Delta%20SMP%204) and resulted in 40hzRay being sentenced to 
+two weeks in prison, after a trial that lasted numerous phases and sessions. However, the server 
+ended before he could serve his sentence.
+
+### The Nordenbürger-Waydinean War
+In [Delta SMP 5](Delta%20SMP%205), the first server to feature multiple countries, Waydines experienced 
+a war essential to strengthening its national identity. At the time, the country had five districts 
+(New Hillpath, Mitterfurt, Kamchatskiy, Hasgard, and a provisional district) and reached its population 
+peak. The war against [Nordenbürgen](Nordenbürgen), led by the fascist regime of [etc_pt](etc_pt), 
+began after Waydines offered asylum to [Portugueskiy](Portugueskiy), a political refugee from that 
+country.
+
+The war lasted about eight hours and involved almost all of Waydines in a voice chat during the battles. 
+Waydines' victory significantly increased national morale and sense of identity. After the war, in 
+[Delta SMP 5.1](Delta%20SMP%5.1), Cupertino appointed Portugueskiy as king of Nordenbürgen, forming 
+an alliance that persists to this day between Waydines and the [Ryūsei Shogunate](Ryūsei%20Shogunate), 
+Norden's successor.
+
+During this period, the Accelerationist Party was renamed to the [Socialist Party of Waydines](Socialist%20Party%20of%20Waydines) 
+and began a more heated dispute with the Nationalist Party. The growing political instability was 
+exploited by [Emmeria](Emmeria), a country with which Waydines was in a Cold War.
+
+### Waydinean Intifadas and Fall of the Second Republic
+During the political tensions, the [Waydinean Intifadas](Intifadas%20de%20Waydines) emerged, in which 
+residents of Mitterfurt, supporters of the Nationalist Party, and Kamchatskiy, a major electorate of 
+the Socialist Party, began to show hostility toward each other. The growing conflict led to Cupertino's 
+resignation, with Shazy, the only socialist parliamentarian, being appointed prime minister.
+
+However, Shazy was not politically active, delegating much of the government to Don Ravi. Cupertino, 
+realizing that Don Ravi was concentrating all the three powers of the republic into his hands due to 
+Shazy's inactivity, filed a lawsuit in the Supreme Court. The minister at the time, Anni, supporter of 
+the Nationalist Party, made a political decision and sentenced Don Ravi to be removed from his role 
+and arrested without the right of defense.
+
+Shortly afterward, new elections were held, resulting in Cupertino's victory as prime minister and 
+Shazy as president.
+
+## Civil War of Waydines
+After the elections, dissatisfaction with Don Ravi's imprisonment led to the outbreak of a revolution 
+in Kamchatskiy, externally supported by Emmeria. The day after the election, troops from Emmeria and 
+the Revolutionary Party of Kamchatskiy surrounded Mitterfurt. Cupertino, from his apartment window, 
+capitulated, and the city was completely destroyed by the revolutionaries. This event marked the fall 
+of Waydines.
+
+## Provisional Government
+After the Civil War of Waydines, the country entered a provisional state without political leaders, 
+adopting a tricolor flag without a coat of arms, which the country still uses today. 
+This period lasted about a week, until the proclamation of the Third Republic.
+
+## Third Republic (Present Day)
+The Third Republic was proclaimed behind the scenes during [Don SMP 1](Don%20SMP%201), which Waydines 
+did not directly participate in, but had some involvement in the overthrow of Kamchatskiy during 
+[Don SMP 2](Don%20SMP%202). Waydines also became a true parliamentary republic with the formulation 
+of a new constitution.
+
+After the fall of Kamchatskiy, the city was made a district of Waydines again, within the terms of 
+the peace agreement. The Third Republic had its first election between the [Social Democrats](Social%20Democrats%20(Waydines)) 
+(`SD`), successor to the Nationalist Party, and the [People's Democratic Party](People's%20Democratic%20Party) 
+(`PDP`), successor to the Socialist Party. The results were 3 seats for the PDP and 4 for the SD. 
+The following day, Kamchatskiy peacefully declared independence, forming Frigustell.
+
+Much later, during the [Cup SMP](Cup%20SMP), the Elysian ethnicity emerged, resulting from cultural 
+exchange between Waydines, the Empire of Nordenbürgen, and the [Theocratic Kingdom of Osmaria](Osmaria), 
+all located on the continent of Elysium. The growth of this identity led to the creation of the 
+[Elysian Union](Elysian%20Union), a confederation that ensured peaceful and economic development for 
+the three countries, despite lengthy debates about its structure and the possibility of a single 
+currency for all the countries.
+
+Currently, Waydines is an example of full and peaceful democracy, being the most diplomatic country 
+in the world, maintaining diplomats with all countries except Emmeria; the only one to have a complete 
+constitution, and the only nation where the highest office is democratically elected.
+
+# Politics
+## Structure
+The country has a parliamentary system without a president; the prime minister exercises complete 
+executive power, appointing ministries and secretaries, and is responsible for decrees, provisional 
+measures, and the process of ratifying laws, having the constitutional right to completely or partially 
+[veto](https://en.wikipedia.org/wiki/Veto) [Acts of Parliament]](https://en.wikipedia.org/wiki/Act_of_Parliament), 
+which, to enter into force, must be signed by the minister too.
+
+Still, Parliament has the right to overturn vetoes, decrees, and provisional measures of the prime minister, 
+with the latter only being subject to Parliament's opinion after a week of the measure being in effect. 
+No law can be created without at least a relative majority of parliamentarians.
+
+There is also the position of District Councilor, defined in the [Devolution](https://en.wikipedia.org/wiki/Devolution) 
+of Waydines. There is one for each district, except the capital, and it serves to conduct localized 
+decrees and advise parliamentary actions directed at their respective district. According to the 
+national constitution, although relatively autonomous, they must follow any order or imposition from 
+ministers and Parliament.
+
+## Democracy
+
+Currently, the country has only one party, the Social Democrats, but with the recent population growth 
+of Waydines, it will likely soon have a second party, which, when formed, will initiate new national 
+elections, which have been pending since July 6, 2024.
+
+Elections are conducted by the [Superior Electoral Court](Superior%20Electoral%20Court%20(Waydines)), 
+which exercises executive and judicial power over electoral matters. Elections to Parliament are held 
+with the [single transferable vote](https://en.wikipedia.org/wiki/Single_transferable_vote) system on 
+a [closed list](https://en.wikipedia.org/wiki/Closed_list); while elections for District Councilor are 
+by [preferential voting](https://en.wikipedia.org/wiki/Preferential_voting) and allow [independent 
+candidates](https://en.wikipedia.org/wiki/Independent_politician).
+
+# Society
+## Culture and Identity
+The national identity of Waydines is deeply rooted in its history and traditions. The sun, the country's 
+coat of arms, represents not only light and hope but also the strength and continuity of the nation. 
+There is also a strong popular feeling of connection between the nation and the sun.
+
+Waydinean culture is strongly influenced by Madeism, the predominant religion that shapes many of the country's traditions. However, beyond religious festivities such as the Midnight Festival, two dates are especially celebrated by the entire population: Independence Day, which marks the country's sovereignty, and election days, moments when the people reaffirm their commitment to democracy.
+
+In architecture, Waydines presents a unique fusion between [Dutch Baroque](https://en.wikipedia.org/wiki/Dutch_Baroque_architecture) 
+and [modernism](https://en.wikipedia.org/wiki/Modern_architecture), creating an urban environment that 
+blends ornamental grandeur with contemporary functionality. This combination reflects the spirit of 
+the country: a balance between tradition and innovation.
+
+Waydineans are known for their cordiality and shyness, characteristics that influence their form of 
+socialization and political participation. Although reserved, they value dialogue and diplomacy, 
+characteristics that make Waydines one of the most peaceful countries on the global scene.
+
+An additional fact is that the people of Waydines tend to build their cities in cold places, probably
+in memory of the original city of Mitterfurt, which was built in a mountain. Traditionally, therefore,
+the population uses clothes made of goatskin.
+
+## Religion
+Madeism, making up \~83% of the population (census conducted in 2023), is of huge importance to the 
+Waydinean society, being it highly devoted to the religion. The influence of such religion over the 
+country is so big, it was the reason behind the creation of the subdistrict of Kibosaki, that is 
+controlled directly by the Church of the Renewed Faith in Made, and has its territory defined as “all
+presbiteries and the central temple of Mitterfurt” (text taken from the Devolution of Waydines).
+
+Days where there are religious traditions are often treated as holidays, although they are not officially 
+so according to the law.
