--- a/src/pt/waydines.mdx
+++ b/src/pt/waydines.mdx
@@ -105,11 +105,11 @@ em uma cidade, seus habitantes passaram a sentir que Brazilburg não acompanhava
 demais países. A falta de recursos no tesouro nacional e a ausência de progresso no Nether reforçaram 
 essa percepção.
 
-Diante desse cenário, dois generais, Wolfi Hraje e [Jobje](Jobje), foram apontados para liderar um 
-movimento de revolta, encabeçado pelo príncipe Cupertino. Com apoio internacional, o conflito culminou 
-em uma guerra em 6 de janeiro de 2021. Para evitar a destruição de estruturas, a batalha foi travada
-em um coliseu com espectadores internacionais. O conflito foi encerrado quando o rei Don Ravi assinou 
-o reconhecimento da independência da colônia.
+Diante desse cenário, dois generais, Wolfi Hraje e Jobje, foram apontados para liderar um movimento 
+de revolta, encabeçado pelo príncipe Cupertino. Com apoio internacional, o conflito culminou em uma 
+guerra em 6 de janeiro de 2021. Para evitar a destruição de estruturas, a batalha foi travada em um 
+coliseu com espectadores internacionais. O conflito foi encerrado quando o rei Don Ravi assinou o 
+reconhecimento da independência da colônia.
 
 Pouco tempo após a independência, Brazilburg integrou-se a Waydines como cidade sob o nome de "Fucking", 
 que posteriormente foi renomeada para Kamchatskiy a pedido de Cupertino.
@@ -306,9 +306,9 @@ tradições do país. No entanto, além das festividades religiosas como a Festa
 datas são especialmente comemoradas por toda a população: o Dia da Independência, que marca a soberania 
 do país, e os dias de eleição, momentos em que o povo reafirma seu compromisso com a democracia.
 
-Na arquitetura, Waydines apresenta uma fusão única entre o barroco neerlandês e o modernismo, criando 
-um ambiente urbano que mescla a grandiosidade ornamental com a funcionalidade contemporânea. Essa 
-combinação reflete o espírito do país: um equilíbrio entre tradição e inovação.
+Na arquitetura, Waydines apresenta uma fusão única entre o barroco neerlandês e o [modernismo](https://pt.wikipedia.org/wiki/Arquitetura_moderna), 
+criando um ambiente urbano que mescla a grandiosidade ornamental com a funcionalidade contemporânea. 
+Essa combinação reflete o espírito do país: um equilíbrio entre tradição e inovação.
 
 <Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741987884/ererer_ismxcw.png" description="Roupa de frio waydineense" />
 
