--- a/src/en/waydines.mdx
+++ b/src/en/waydines.mdx
@@ -9,7 +9,7 @@ short_description: "Country in Elysium"
 [Elysian](Elysium) and a [Brazilbourgish](Brazilburg) country (which makes it a cousin-nation of 
 [Frigustell](Frigustell)). Composed of two districts, being these its planned capital [Mitterfurt](Mitterfurt) 
 and the city of [Gremont](Gremont), it has a total of 13 officially registered citizens (2024). 
-Adittionally, Waydines is a member and founder state of the [Elysian Union](Elysian%20Union).
+Addittionally, Waydines is a member and founder state of the [Elysian Union](Elysian%20Union).
 
 <QuickFacts title="República Parlamentarista de Waydines">
     <CountrySymbols flag="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741742679/Waydines_mjsz8k.svg" coatOfArms="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741798636/Sol_tfbh4k.svg"/>
