Major fixes to the English version of the Waydines article

--- a/src/en/waydines.mdx
+++ b/src/en/waydines.mdx
@@ -112,6 +112,8 @@ independence.
 Shortly after independence, Brazilburg integrated into Waydines as a city under the name “Fucking,” 
 which was later renamed to Kamchatskiy at Cupertino's request.
 
+<Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741822826/body_nhbnnc.png" description="Uniform of the Revolutionaries"/>
+
 Initially, Waydines adopted a [diarchic](https://en.wikipedia.org/wiki/Diarchy) system, governed by 
 Wolfi and Cupertino. However, the structure quickly evolved into a semi-constitutional monarchy, with 
 Cupertino as king and Wolfi assuming the position of prime minister without elections. This system 
@@ -166,6 +168,7 @@ events among people who played on EDG SMP. Due to Waydines' strong relationship 
 grew rapidly and, at its peak, represented 100% of the population.
 
 ### The 40hzRay Crisis
+<Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741825533/processo1pagina_owmol8.webp" height="20rem" description="First page of the Lawsuit filed against 40hzRay"/>
 
 At the beginning of the New Republic, there was chaos. A citizen, [40hzRay](40hzRay), began repeatedly 
 causing damage to the nation and its inhabitants. In response, the constituent assembly rushed to 
@@ -186,6 +189,8 @@ two weeks in prison, after a trial that lasted numerous phases and sessions. How
 ended before he could serve his sentence.
 
 ### The Nordenbürger-Waydinean War
+<Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741867174/dd80e8ae-b6df-4164-99c3-cca1433011f0.png" description="Player List during the War" />
+
 In [Delta SMP 5](Delta%20SMP%205), the first server to feature multiple countries, Waydines experienced 
 a war essential to strengthening its national identity. At the time, the country had five districts 
 (New Hillpath, Mitterfurt, Kamchatskiy, Hasgard, and a provisional district) and reached its population 
@@ -198,6 +203,8 @@ Waydines' victory significantly increased national morale and sense of identity.
 [Delta SMP 5.1](Delta%20SMP%5.1), Cupertino appointed Portugueskiy as king of Nordenbürgen, forming 
 an alliance that persists to this day between Waydines and the [Ryūsei Shogunate](Ryūsei%20Shogunate), 
 Norden's successor.
+
+<Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741877950/Communist_Waydines_yzdfnk.svg" maxWidth="12rem" description="Logo of the Socialist Party of Waydines" />
 
 During this period, the Accelerationist Party was renamed to the [Socialist Party of Waydines](Socialist%20Party%20of%20Waydines) 
 and began a more heated dispute with the Nationalist Party. The growing political instability was 
@@ -242,6 +249,8 @@ the peace agreement. The Third Republic had its first election between the [Soci
 (`PDP`), successor to the Socialist Party. The results were 3 seats for the PDP and 4 for the SD. 
 The following day, Kamchatskiy peacefully declared independence, forming Frigustell.
 
+<Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741872003/elisiamapa_ecwy3g.png" height="20rem" description="Map of the continent of Elysium during the Cup SMP, before Waydines bought the western territories of Norden" />
+
 Much later, during the [Cup SMP](Cup%20SMP), the Elysian ethnicity emerged, resulting from cultural 
 exchange between Waydines, the Empire of Nordenbürgen, and the [Theocratic Kingdom of Osmaria](Osmaria), 
 all located on the continent of Elysium. The growth of this identity led to the creation of the 
@@ -258,7 +267,7 @@ constitution, and the only nation where the highest office is democratically ele
 The country has a parliamentary system without a president; the prime minister exercises complete 
 executive power, appointing ministries and secretaries, and is responsible for decrees, provisional 
 measures, and the process of ratifying laws, having the constitutional right to completely or partially 
-[veto](https://en.wikipedia.org/wiki/Veto) [Acts of Parliament]](https://en.wikipedia.org/wiki/Act_of_Parliament), 
+[veto](https://en.wikipedia.org/wiki/Veto) [Acts of Parliament](https://en.wikipedia.org/wiki/Act_of_Parliament), 
 which, to enter into force, must be signed by the minister too.
 
 Still, Parliament has the right to overturn vetoes, decrees, and provisional measures of the prime minister, 
@@ -272,6 +281,7 @@ national constitution, although relatively autonomous, they must follow any orde
 ministers and Parliament.
 
 ## Democracy
+<Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741874088/socdemgu_gsphaz.svg" height="8rem" description="Logo of the Social Democrats (party)"/>
 
 Currently, the country has only one party, the Social Democrats, but with the recent population growth 
 of Waydines, it will likely soon have a second party, which, when formed, will initiate new national 
@@ -296,6 +306,8 @@ In architecture, Waydines presents a unique fusion between [Dutch Baroque](https
 and [modernism](https://en.wikipedia.org/wiki/Modern_architecture), creating an urban environment that 
 blends ornamental grandeur with contemporary functionality. This combination reflects the spirit of 
 the country: a balance between tradition and innovation.
+
+<Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741987884/ererer_ismxcw.png" description="Traditional cold weather clothing of the Waydineans" />
 
 Waydineans are known for their cordiality and shyness, characteristics that influence their form of 
 socialization and political participation. Although reserved, they value dialogue and diplomacy, 
