Articles about Cupertino

--- a/src/pt/cupertino kurt.mdx
+++ b/src/pt/cupertino kurt.mdx
@@ -8,11 +8,12 @@ short_description: "Player Notório"
 desde 2022. Membro do partido [Social Democratas](Social%20Democratas%20(Waydines)), já foi rei de 
 [Waydines](Waydines) durante o período imperial, presidente na Primeira República e eleito duas vezes 
 Primeiro-Ministro na [Segunda República](Segunda%20República%20de%20Waydines). Também é programador,
-escritor e historiador.
+escritor, historiador e teólogo servindo como presbítero no presbitério de [Kibosaki](Kibosaki) da 
+[Igreja de Made](Madeísmo).
 <QuickFacts title="Cupertino von Kurt">
     <tr>
         <td colSpan="2">
-            <DiscordAvatar userId="1028842655347654706"/>
+            <Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1742054620/cuper_sanref.png" height="14rem" centered={true}/>
         </td>
     </tr>
     <tr>
@@ -29,7 +30,11 @@ escritor e historiador.
     </tr>
     <tr>
         <td>Partido Político</td>
-        <td>[Social Democratas](Social%20Democratas)</td>
+        <td>[Social Democratas](Social%20Democratas%20(Waydines))</td>
+    </tr>
+    <tr>
+        <td>Crença</td>
+        <td>[Madeísmo](Madeísmo)</td>
     </tr>
     <tr>
         <td>Origem</td>
@@ -50,3 +55,18 @@ escritor e historiador.
         <td>[cupertino.vercel.app](https://cupertino.vercel.app/)</td>
     </tr>
 </QuickFacts>
+
+# Governo
+Como Primeiro-Ministro, Cupertino liderou a Assembleia Constituinte de Waydines, desempenhando um papel 
+fundamental na redação da nova Constituição Nacional, considerada a mais democrática do mundo. Seu 
+governo tem sido caracterizado pelo fortalecimento dos direitos civis e pela criação de várias leis 
+básicas para a fundamentação de Waydines como um país organizado e republicano. Embora tenha sido uma 
+figura controversa no passado, principalmente durante o período da [Segunda República](Segunda%20República%20de%20Waydines), 
+atualmente é bem visto pelo povo devido à estabilidade e avanços institucionais promovidos em sua 
+gestão.
+
+Seu governo destacou-se na diplomacia, promovendo paz e cooperação global. Graças à sua habilidade 
+diplomática incomparável, Waydines tornou-se um dos países mais pacíficos do mundo. Fomentou a formação 
+de organizações internacionais para a paz, como a [Crescente Vermelha](Crescente%20Vermelha) e o 
+[Fórum das Nações](Fórum%20das%20Nações); além de alianças, tratados e pactos como a [União Elisiana
+](União%20Elisiana) e o [Pacto Solar](Pacto%20Solar).
