--- a/src/pt/delta smp 3.mdx
+++ b/src/pt/delta smp 3.mdx
@@ -42,7 +42,7 @@ servidor a ser completamente apagado.
     <tr>
         <td>País(es)</td>
         <td>
-            <a href="Waydines">Waydines</a>
+            <CountryCitation country="Waydines" />
         </td>
     </tr>
 </QuickFacts>
@@ -52,9 +52,9 @@ Houveram três principais eventos no Delta SMP 3, sendo eles:
 
 - Venda do terreno de Mitterfurt para Kid, que estabeleceu Hillpath no lugar;
 
-- Testes com armas nucleares, que foram primeiramente conceitualizadas por [Wolfi Hraje](Wolfi%Hraje);
+- Testes com armas nucleares, que foram primeiramente conceitualizadas por [Wolfi Hraje](Wolfi%20Hraje);
 
-- Segunda construção do [WTC](World%20%Trade%20Center);
+- Segunda construção do [WTC](World%20Trade%20Center);
 
 # Galeria
 <div class="flex flex-col gallery gap-2 w-full">
